make the background black

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.app {
+  background-color: black;
+}
+
 .overflow-hidden::-webkit-scrollbar {
   display: none;
 }
